--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@ Telethon>=1.24.0
 pyrogram>=2.0.106
 python-telegram-bot>=20.0
 
+# Web Server
+uvicorn>=0.27.0
+fastapi>=0.109.0
+
 # Database
 psycopg2-binary>=2.9.9
 SQLAlchemy>=2.0.0
