--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       DB_USER: ${DB_USER:-telegram_manager}
       DB_PASSWORD: ${DB_PASSWORD:-secure_password}
       DB_NAME: ${DB_NAME:-telegram_accounts}
-      PYTHONPATH: /app
+      PYTHONPATH: /app/src
     volumes:
       - ./data/sessions:/app/data/sessions
       - ./data/exports:/app/data/exports
