fix: Add env_file and correct TELEGRAM_BOT_TOKEN env var

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,12 @@ services:
       dockerfile: Dockerfile
     container_name: telegram_account_manager_bot
     restart: unless-stopped
+    env_file:
+      - .env
     environment:
-      BOT_TOKEN: ${BOT_TOKEN}
+      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
+      TELEGRAM_API_ID: ${TELEGRAM_API_ID}
+      TELEGRAM_API_HASH: ${TELEGRAM_API_HASH}
       DB_HOST: postgres
       DB_PORT: 5432
       DB_USER: ${DB_USER:-telegram_manager}
